@@ -1,3 +1,4 @@
+* Use Popover for search filter
 * Display version on login dialog
 * Use tab key for tab navigation
 * Use ShortcutsWindow
